# space-shooter

./: CMakeCache.txt  CMakeLists.txt  imgui.ini  spaceshooter
src/: CCollision.h  CInput.h  CLifeSpan.h  CScore.h  CShape.h  CTransform.h  Common.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Vec2.cpp  Vec2.h  main.cpp
